--- a/disqus-sdk/build.gradle
+++ b/disqus-sdk/build.gradle
@@ -26,17 +26,17 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-
     provided 'com.squareup.dagger:dagger-compiler:1.2.2'
+    compile 'com.android.support:appcompat-v7:22.1.1'
+    compile 'com.android.support:cardview-v7:22.1.1'
+    compile 'com.android.support:recyclerview-v7:22.1.1'
+   // compile 'com.android.support:palette-v7:22.1.1'
 
-    compile 'com.android.support:appcompat-v7:21.0.2'
-    compile 'com.android.support:cardview-v7:21.0.2'
-    compile 'com.android.support:recyclerview-v7:21.0.2'
     compile 'com.google.code.gson:gson:2.3'
     compile 'com.squareup.dagger:dagger:1.2.2'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
-    compile 'com.squareup.okhttp:okhttp-urlconnection:2.0.0'
-    compile 'com.squareup.okhttp:okhttp:2.0.0'
-    compile 'com.squareup.picasso:picasso:2.4.0'
+    compile 'com.squareup.okhttp:okhttp-urlconnection:2.2.0'
+    compile 'com.squareup.okhttp:okhttp:2.3.0'
+    compile 'com.squareup.picasso:picasso:2.5.0'
     compile 'com.melnykov:floatingactionbutton:1.1.0'
 }
